--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "@types/imagesloaded": "^4.1.6",
+    "gsap": "^3.12.7",
+    "imagesloaded": "^5.0.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "react": "^19.0.0",
