--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@sanity/image-url": "^1.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "@types/imagesloaded": "^4.1.6",
-    "gsap": "^3.12.7",
+    "@types/react-slick": "^0.23.13",
+    "gsap": "^3.13.0",
     "imagesloaded": "^5.0.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
